# axum-examples

./: Cargo.toml  _typos.toml
axum-auth/: Cargo.toml  private_key.pem  public_key.pem
axum-auth/rest_clients/: auth.rest
axum-auth/src/: main.rs
